[package]
name = "diario"
version = "0.1.0"
authors = ["Adrián Arroyo Calle <adrian.arroyocalle@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.6"
diesel = { version = "1.4.5", features = ["chrono"]}
serde = "1.0.117"
serde_derive = "1.0.117"
chrono = { version = "0.4.19", features = ["serde"] }
md5 = "0.7.0"
ring = "0.13.5"
data-encoding = "2.3.1"
regex = "1.4.2"
rand = "0.7.3"
lettre = "0.9.6"
lettre_email = "0.9.4"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["serve","tera_templates","diesel_postgres_pool"]
