[package]
name = "diario"
version = "0.1.0"
authors = ["Adrián Arroyo Calle <adrian.arroyocalle@gmail.com>"]
edition = "2021"

[dependencies]
rocket = "0.4.11"
diesel = { version = "1.4.8", features = ["chrono"]}
serde = "1.0.145"
serde_derive = "1.0.145"
chrono = { version = "0.4.22", features = ["serde"] }
md5 = "0.7.0"
ring = "0.17.7"
data-encoding = "2.3.2"
regex = "1.6.0"
rand = "0.8.5"
lettre = "0.9.6"
lettre_email = "0.9.4"

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["serve","tera_templates","diesel_postgres_pool"]
